Fixed heading wrapping

--- a/Tutorial 5/styles.css
+++ b/Tutorial 5/styles.css
@@ -15,12 +15,13 @@ header {
     justify-content: center;
     background-color: grey;
     border: white 3px solid;
-    margin: 1vh;
+    margin: 1% 10%;
 }
+
 main {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1 fr;
+    grid-template-rows: 1fr 1fr;
     background-color:lightslategrey;
     border: black 2px solid;
     border-radius: 5px;
@@ -28,7 +29,7 @@ main {
 }
 body{
     display: grid;
-    grid-template-columns: 1fr 1 fr 1fr;
+    grid-template-columns: 1fr;
     padding: 10px;
 }
 nav {
@@ -51,8 +52,8 @@ footer {
 h1 {
     text-align: center;
     color: white;
-    padding: 2px;
     font-family:'Times New Roman', Times, serif;
+    
     
 }
 h2 {
